@@ -653,7 +653,7 @@ analyze = function(x,
                            plot = FALSE)$acf / autoCorrelation_filter
   }
   autocorBank = autocorBank[-1, ]  # b/c it starts with zero lag (identity)
-  # plot(autocorBank[, 100], type = 'l')
+  # plot(autocorBank[, 78], type = 'l')
   rownames(autocorBank) = samplingRate / (1:nrow(autocorBank))
 
   ## FORMANTS
